--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@
 }
 
 .visited {
-    background-color: blue !important;
+    background-color: rgb(40, 40, 231) !important;
     transition: all 8ms cubic-bezier(0.86, 0, 0.07, 1);
 }
 
 .path {
-    background-color: yellow !important;
+    background-color: rgb(240, 240, 88) !important;
     transition: all 8ms cubic-bezier(0.86, 0, 0.07, 1);
 }
 
