--- a/src/App.css
+++ b/src/App.css
@@ -16,13 +16,13 @@
 }
 
 .visited {
-    background-color: rgb(40, 40, 231) !important;
-    transition: all 8ms cubic-bezier(0.86, 0, 0.07, 1);
+    background-color: rgb(17, 176, 224) !important;
+    transition: all 300ms ease-out;
 }
 
 .path {
     background-color: rgb(240, 240, 88) !important;
-    transition: all 8ms cubic-bezier(0.86, 0, 0.07, 1);
+    transition: all 800ms cubic-bezier(0.86, 0, 0.07, 1);
 }
 
 
